<resources>
    <string name="app_name">CallOfDutyTeacher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_error">Fill login or password correctly</string>
    <string name="inet_check">Check Internet connection</string>
    <string name="sing_up_fail">Логин немесе құпия сөзді қате тердіңіз.</string>
    <string name="singing">Жүйеге кіру жүріп жатыр, күте тұрыңыз...</string>
    <string name="sing_out">Жүйеден шығу</string>

    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="save">Сақтау</string>
    <string name="jobs_str">Міндеттерім</string>
    <string name="duty_str">Борыш</string>
    <string name="my_lessons">Менім сабақтарым</string>
    <string name="my_jobs">Жұмыстар</string>
    <string name="instructions">Нұсқаулар</string>
    <string name="mistakes">Қателер</string>
    <string name="news">Хабарландыру</string>
    <string name="shagym_str">Шағымдар</string>
    <string name="shagym_types">шағым түрлері</string>

    <string name="teacher_list">Мұғалімдер тізімі</string>
    <string name="progress">Өнімділігі: 0%</string>

    <string name="job1">Жаңа</string>
    <string name="job2">Тексеріс</string>
    <string name="job3">Біткен</string>

    <string name="semestr1">I семестр</string>
    <string name="semestr2">II семестр</string>

    <string name="delStr">Өшіру</string>
    <string name="checkStr">Тексеру</string>
    <string name="finishedStr">Біткен жұмыс</string>
    <string name="sendToCheck">Тексеріске жіберу</string>
    <string name="mistakeStr">Қатесі бар</string>
    <string name="addingNewTeacher2">Жаңа мұғалім енгізу!</string>
    <string name="name">Аты-жөні</string>
    <string name="email">Емайл</string>
    <string name="phoneNumber">Телефон номер</string>
    <string name="password">Құпия сөз</string>
    <string name="photo">Сурет таңдау</string>
    <string name="photoSelected">Сурет таңдалды</string>
    <string name="addingNewTeacher">Жаңа адам енгізіліп жатыр...</string>
    <string name="addingNewJob">Жаңа жұмыс енгізу.</string>
    <string name="lessonList">Беретін сабақтар тізімі</string>
    <string name="addingNewTeacherSuccess">Жаңа адам сәтті енгізілді!</string>
    <string name="photoLoading">Сурет сақталып жатыр...</string>
    <string name="inetConnection">Интернет байланысыңызды тексеріңіз!</string>
    <string name="addingLesson">Сабақ енгізу</string>
    <string name="addingShagym">Жаңа шағым енгізу</string>
    <string name="selectSemestr">Семестр таңдаңыз</string>
    <string name="selectLesson">Сабақты таңдаңыз</string>
    <string name="selectCourse">Топты таңдаңыз</string>

    <string name="selectShType">Түрін таңдаңыз</string>
    <string name="selectShthing">Нысаны таңдаңыз</string>

    <string name="shagym_t">Қалдырушы: </string>


    <string name="cab_number">Кабинет</string>
    <string name="lessonName">Сабақ аты</string>
    <string name="jobName">Жұмыс аты</string>
    <string name="hour">Сағат саны</string>
    <string name="adding">Енгізу</string>
    <string name="desc">Түсіндірмесі</string>

    <string name="notfoundUser">Қолданушы табылған жоқ!</string>
    <string name="phoneNumberMistake">Телефон номер дұрыс толтырылмады</string>
    <string name="photoSelectMistake">Сурет таңдалмады</string>
    <string name="passwordMistake">Құпия сөз ұзындығы 6-дан көп болуы керек</string>
    <string name="passwordMistake2">Құпия сөз дұрыс толтырылмады</string>
    <string name="passwordMistake3">Құпия сөз әлсіз болып тұр</string>
    <string name="fill_mistake">Толығымен толтырыңыз</string>
    <string name="email_mistake">Электр. пошта мекен-жайы дұрыстап толтырыңыз</string>
    <string name="email_duplicate">Бұндай электр. пошта мекен-жайы тіркелген</string>

    <string name="news_add">Хабарландыру енгізу</string>
    <string name="news_title">Тақырыбы</string>
    <string name="news_date">Енгізілген уақыты:</string>

    <string-array name="jobTypes">
        <item>РУП</item>
        <item>КТП</item>
        <item>сабақ жоспары</item>
        <item>аттестация 1</item>
        <item>аттестация 2</item>
        <item>сынақ</item>
        <item>емтихан</item>
        <item>журнал</item>
        <item>практика</item>
        <item>кураторлық жұмыстар</item>
        <item>портфолио</item>
        <item>басқа</item>
    </string-array>

    <string-array name="lessonList">
        <item>1-01 Информатика\nСағат саны: 28</item>
        <item>1-02 Информатика\nСағат саны: 24</item>
        <item>1-03 Информатика\nСағат саны: 56</item>
        <item>1-04 Информатика\nСағат саны: 30</item>
        <item>2-01 Информатика\nСағат саны: 42</item>
    </string-array>

    <string-array name="semestrStore">
        <item>I семестр</item>
        <item>II семестр</item>
    </string-array>

    <string-array name="courseStrore">
        <item>1-01</item>
        <item>1-02</item>
        <item>1-03</item>
        <item>1-04</item>
        <item>2-01</item>
        <item>2-02</item>
        <item>2-03</item>
        <item>3-01</item>
        <item>3-02</item>
        <item>3-03</item>
        <item>4-09</item>
    </string-array>

    <string-array name="monthStore">
        <item>Қаңтар</item>
        <item>Ақпан</item>
        <item>Наурыз</item>
        <item>Сәуір</item>
        <item>Мамыр</item>
        <item>Маусым</item>
        <item>Шілде</item>
        <item>Тамыз</item>
        <item>Қыркүйек</item>
        <item>Қазан</item>
        <item>Қараша</item>
        <item>Желтоқсан</item>
    </string-array>

</resources>
